# post-automation

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 001-architecture.md  002-ai-detection.md  003-ppt-modification.md  004-api-design.md
scripts/: generate_workflow.py  run_api.sh  run_ui.sh
src/post_automation/: constants.py
src/post_automation/api/: main.py
src/post_automation/api/routes/: detection.py  health.py  modification.py
src/post_automation/core/: ai_detector.py  content_generator.py  ppt_analyzer.py  ppt_modifier.py
src/post_automation/models/: api_schemas.py  detection.py  ppt.py
src/post_automation/ui/: app.py
src/post_automation/ui/pages/: 1_AI_Detection.py  2_PPT_Modification.py  3_About.py
src/post_automation/utils/: config.py  file_handler.py  logger.py  validators.py
src/post_automation/workflows/: generator.py
src/post_automation/workflows/templates/: base_workflow.json
tests/: conftest.py  test_example.py
workflows/: README.md
